--- a/views/items/show.slim
+++ b/views/items/show.slim
@@ -30,15 +30,36 @@ article
     dd = item.language.name
     dt category
     dd = item.category.name
-    dt authors
+    dt 
+      details
+        summary authors
+        == slim :'authors/new', locals: { parent: item }
     - for author in item.authors
-      dd = author.full_name
-    dt keywords
+      dd 
+        == slim :'authors/delete', locals: { parent: item, author: author }
+        = author.full_name
+    dt 
+      details
+        summary keywords
+        == slim :'keywords/new', locals: { parent: item }
     - for keyword in item.keywords
-      dd = keyword.name
-    dt tags
+      dd 
+        == slim :'keywords/delete', locals: { parent: item, keyword: keyword }
+        a href=URI.encode("http://google.com/?q=#{keyword.name}") title=keyword.name target='_blank' = keyword.name
+    dt 
+      details
+        summary tags
+        == slim :'tags/new', locals: { parent: item }
     - for tag in item.tags
-      dd = tag.name
-    dt links
+      dd 
+        == slim :'tags/delete', locals: { parent: item, tag: tag }
+        a href=URI.encode("http://twitter.com/search/?q=\"#{tag.name}\"") title=tag.name target='_blank' ##{tag.name}
+    dt 
+      details
+        summary links
+        == slim :'links/new', locals: { parent: item }
     - for link in item.links
-      dd: a href=link.url title=link.name = link.name
+      dd
+        == slim :'links/delete', locals: { parent: item, link: link }
+        a href=link.url title=link.title target='_blank' = link.title
+    
