--- a/views/authors/new.slim
+++ b/views/authors/new.slim
@@ -1,4 +1,4 @@
-form method='post' action="/#{@collection.id}/authors"
+form method='post' action=url("/#{parent.id}/authors")
   fieldset
     p
       label
