--- a/views/keywords/delete.slim
+++ b/views/keywords/delete.slim
@@ -1,3 +1,3 @@
-form.compact method='post' action="/#{collection.id}/authors/#{author.id}"
+form.compact method='post' action=url("/#{parent.id}/keywords/#{keyword.name}")
   input type='hidden' name='_method' value='delete'
   input type='submit' value='remove'
