--- a/views/keywords/new.slim
+++ b/views/keywords/new.slim
@@ -1,4 +1,4 @@
-form method='post' action="/#{@collection.id}/keywords"
+form method='post' action=url("/#{parent.id}/keywords")
   fieldset
     p
       label
