--- a/views/links/delete.slim
+++ b/views/links/delete.slim
@@ -1,3 +1,3 @@
-form.compact method='post' action="/#{collection.id}/keywords/#{keyword.name}"
+form.compact method='post' action=url("/#{parent.id}/links/#{link.id}")
   input type='hidden' name='_method' value='delete'
   input type='submit' value='remove'
