--- a/views/links/new.slim
+++ b/views/links/new.slim
@@ -1,4 +1,4 @@
-form method='post' action="/#{@collection.id}/links"
+form method='post' action=url("/#{parent.id}/links")
   fieldset
     p
       label
