--- a/views/tags/delete.slim
+++ b/views/tags/delete.slim
@@ -1,3 +1,3 @@
-form.compact method='post' action="/#{collection.id}/tags/#{tag.name}"
+form.compact method='post' action=url("/#{parent.id}/tags/#{tag.name}")
   input type='hidden' name='_method' value='delete'
   input type='submit' value='remove'
