--- a/views/tags/new.slim
+++ b/views/tags/new.slim
@@ -1,4 +1,4 @@
-form method='post' action="/#{@collection.id}/tags"
+form method='post' action=url("/#{parent.id}/tags")
   fieldset
     p
       label
