--- a/views/links/new.slim
+++ b/views/links/new.slim
@@ -3,6 +3,6 @@ form method='post' action=url("/#{parent.id}/links")
     p
       label
         ' url
-        input name='link[url]' type='url' required=true maxlength=255
+        input name='link[url]' type='url' placeholder='http://' required=true maxlength=255
     p
       input type='submit' value='add'
